(node)-Api_JWT finalized
